--- a/src/components/Repos/Repos.module.scss
+++ b/src/components/Repos/Repos.module.scss
@@ -9,11 +9,24 @@
 
   .forBorderWrap {
     border: 1px solid #282c34;
+    max-height: 450px;
+    overflow-y: auto;
 
     .formContainer {
       h4 {
         margin-bottom: 6px;
         margin-top: 10px;
+      }
+      .userData {
+        padding: 5px;
+        overflow: auto;
+        text-align: left;
+        img {
+          float: left;
+          width: 100px;
+          padding-right: 5px;
+        }
+
       }
 
     }
@@ -22,6 +35,7 @@
       padding-left: 5px;
       padding-right: 5px;
       border-top: 1px solid #282c34;
+
 
       a {
         display: flex;
